--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,3 +34,10 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+      
+      - name: Try artifacts
+        run: echo hi > world.txt
+        
+      - uses: actions/upload-artifact@v2
+        with:
+          path: world.txt
